yaml/12.dashboard/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: kube-system
spec:
  rules:
    - host: dashboard.devops.cn
      http:
        paths:
        - backend:
            serviceName: kubernetes-dashboard
            servicePort: 80
          path: /
